@startuml

hide circle
skinparam linetype ortho

entity documents {
    id: UUID <<generated>>
    --
    * url: varchar(1000)
    * downloaded_at: timestamp
    * content: text
    created_at: timestamp
    created_by: varchar(100)
}

entity links {
    id: UUID <<generated>>
    --
    * url: varchar(1000) <<UNIQUE INDEX>>
}

entity documents_to_links {
    id: UUID <<generated>>
    --
    * document_id: UUID <<FK>>
    * link_id: UUID <<FK>>
}

entity images {
    id: UUID <<generated>>
    --
    * url: varchar(1000) <<UNIQUE>>
    size: integer
    width: integer
    height: integer
    filename: varchar(1000)
    rank: integer
}

entity documents_to_images {
    id: UUID <<generated>>
    --
    * document_id: UUID <<FK>>
    * image_id: UUID <<FK>>
}

entity categories {
    id: UUID <<generated>>
    --
    name: varchar(100) <<UNIQUE>>
}

entity documents_to_categories {
    id: UUID <<generated>>
    --
    * document_id: UUID <<FK>>
    * category_id: UUID <<FK>>
}

entity choices {
    id: UUID <<generated>>
    --
    * first: UUID <<FK>>
    * second: UUID <<FK>>
    * answered_at: timestamp
    provided_at: timestamp
}

documents ||--o{ documents_to_links
documents_to_links }|--|| links
documents ||--o{ documents_to_images
documents_to_images }|--|| images
documents ||-o{ documents_to_categories
documents_to_categories }|--|| categories
images ||-o{ choices
images ||-o{ choices

@enduml
